修复部分页面字体过小的问题 适配新版朋友圈

--- a/source/css/_extra/home_top/top_group_banner.css
+++ b/source/css/_extra/home_top/top_group_banner.css
@@ -42,7 +42,7 @@
 
 .topGroup .todayCard .todayCard-info .todayCard-tips {
   opacity: 0.8;
-  font-size: 0.6rem;
+  font-size: 12px;
 }
 
 .topGroup .todayCard .todayCard-info .todayCard-title {
@@ -162,7 +162,7 @@
   background: var(--anzhiyu-theme);
   color: var(--anzhiyu-white);
   padding: 2px 8px;
-  font-size: 0.6rem;
+  font-size: 12px;
   border-radius: 12px 0 12px 0;
   transition: 0.3s;
   cursor: pointer;
