--- a/source/css/_page/about.styl
+++ b/source/css/_page/about.styl
@@ -281,7 +281,7 @@ body[data-type='about'] #web_bg {
 
 #statistic div span:first-child {
   opacity: 0.8;
-  font-size: 0.6rem;
+  font-size: 12px;
 }
 
 #statistic div span:last-child {
@@ -481,7 +481,7 @@ body[data-type='about'] #web_bg {
 
 .author-content-item.selfInfo .selfInfo-title {
   opacity: 0.8;
-  font-size: 0.6rem;
+  font-size: 12px;
   line-height: 1;
   margin-bottom: 8px;
 }
@@ -537,7 +537,7 @@ body[data-type='about'] #web_bg {
 
 .author-content-item .author-content-item-tips {
   opacity: 0.8;
-  font-size: 0.6rem;
+  font-size: 12px;
   margin-bottom: 0.5rem;
 }
 
