--- a/source/css/_layout/aside.styl
+++ b/source/css/_layout/aside.styl
@@ -104,6 +104,7 @@
           width: 26px;
           height: 26px;
           border-radius: 0px;
+          transition: 0s
 
     .card-info-social-icons
       margin: 0;
@@ -416,9 +417,11 @@
 
 .avatar-img
   width: 118px;
+  height 118px
   right: 0;
   top: 0;
   border-radius: 500px;
+  object-fit: cover;
   position: absolute;
   opacity: 1;
   transition: .3s;
