修复相册集按钮文字过长情况超出

--- a/source/css/_page/about.styl
+++ b/source/css/_page/about.styl
@@ -320,14 +320,11 @@ body[data-type='about'] #web_bg {
 
 .author-content-item .card-content .banner-button-group .banner-button {
   height: 40px;
-  width: 118px;
   border-radius: 20px;
   justify-content: center;
-  //background: var(--anzhiyu-card-bg);
   background: var(--anzhiyu-white-op);
-  //color: var(--font-color);
   color: var(--anzhiyu-white);
-  display: flex;
+  display: inline-flex;
   align-items: center;
   z-index: 1;
   transition: 0.3s;
