perf(layout): 优化静态资源加载
- 将 universe 和 bubble 特效的脚本来源从 npm.elemecdn.com 更改为 cdn.osyb.cn
- 更新 qrcode.min.js 的加载路径为 cdn.osyb.cn

--- a/layout/includes/additional-js.pug
+++ b/layout/includes/additional-js.pug
@@ -28,7 +28,7 @@ div
   //- 深色模式粒子效果canvas
   if theme.universe.enable
     canvas(id="universe")
-    script(async src="https://npm.elemecdn.com/anzhiyu-theme-static@1.0.0/dark/dark.js")
+    script(async src="https://cdn.osyb.cn/anzhiyu-theme-static@1.0.0/dark/dark.js")
 
   //- 控制台打印信息
   if theme.console.enable
@@ -89,7 +89,7 @@ div
       != partial("includes/third-party/newest-comments/index", {}, { cache: true })
   //- 气泡效果
   if theme.bubble.enable
-    script(async data-pjax src="https://npm.elemecdn.com/anzhiyu-theme-static@1.0.1/bubble/bubble.js")
+    script(async data-pjax src="https://cdn.osyb.cn/anzhiyu-theme-static@1.0.1/bubble/bubble.js")
   if theme.visitorMail.enable
     - const mail = theme.visitorMail.mail
     script.
@@ -98,7 +98,7 @@ div
   //- 即刻依赖waterfall
   script(async data-pjax src=url_for(theme.asset.waterfall))
   //- 文章二维码
-  script(src='https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/qrcodejs/1.0.0/qrcode.min.js')
+  script(src='https://cdn.osyb.cn/qrcodejs@1.0.0/qrcode.min.js')
   //- 右键菜单
   if (theme.rightClickMenu && theme.rightClickMenu.enable)
     script(src=url_for(theme.asset.right_click_menu_js))
