feat(layout): 添加 yuban CDN 并更新 sw-rules.js
- 在 preconnect.pug 文件中添加 yuban CDN 提供商
- 更新 sw-rules.js 文件，将 osyb.cn 添加到缓存匹配规则中
- 优化 sw-rules.js 文件中的代码格式

--- a/layout/includes/head/preconnect.pug
+++ b/layout/includes/head/preconnect.pug
@@ -2,6 +2,7 @@
   const { internal_provider, third_party_provider, custom_format } = theme.CDN
   const providers = {
     'jsdelivr': '//cdn.jsdelivr.net',
+    'yuban': '//cdn.osyb.cn/npm',
     'cdnjs': '//cdnjs.cloudflare.com',
     'unpkg': '//unpkg.com',
     'elemecdn': '//npm.elemecdn.com',
