--- a/layout/includes/header/index.pug
+++ b/layout/includes/header/index.pug
@@ -40,7 +40,8 @@ header#page-header(class=`${isHomeClass}` style=home_index_img_bg)
                 use(href='#gentle-wave', x='48', y='5')
                 use(href='#gentle-wave', x='48', y='7')
         #post-top-cover
-          img#post-top-bg(class='nolazyload' src=bg_img)
+          img#post-top-bg(class='nolazyload' src=bg_img alt='#{page.title} 顶部背景图')
+
 
     else if is_home() 
       #site-info
