feat(artalk): 增强评论数量检索并添加暗黑模式支持以集成Artalk fix #340

--- a/layout/includes/header/post-info.pug
+++ b/layout/includes/header/post-info.pug
@@ -141,5 +141,5 @@
           when 'Artalk'
             +countBlock
               a(href=url_for(page.path) + '#post-comment')
-                span.artalk-count
+                span.artalk-count(data-page-key=url_for(page.path))
                   i.anzhiyufont.anzhiyu-icon-spinner.anzhiyu-spin
